--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/modules/modules-main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/circle.png">
+    <link rel="icon" href="img/circle.png">
     <title>Conversor</title>
 </head>
 
