--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
 
                     <div class="of-area" style="display: grid; place-items: center; padding-top: 2rem;">
-                       <img src="/img/Arrow 1.png" width="40px" alt="">
+                       <img src="img/Arrow 1.png" width="40px" alt="">
                     </div>
 
                     <div class="of-area" style="text-align: end; display: grid; place-items: center;">
